mobile resp fix

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </div>
     </nav>
 
-    <section class="Container" style="margin: 45px 0 0 0;">
-        <div class="row" style="height: 65vh;">
-            <div class="col" style="width: 60%; display: flex; align-items: center;">
+    <section class="Container hero" style="margin: 45px 0 0 0;">
+        <div class="row" style="margin: 10% 0%;">
+            <div class="col col-60" style="display: flex; align-items: center;">
                 <div
                     style="gap: 10px; display: flex; flex-direction: column; align-items: start; justify-content: space-between;">
                     <label for="" class="heading">Software Development Engineer</label>
@@ -40,12 +40,12 @@
                             src="./Resources/Images/VectorArrow.svg" alt="Arrow"></a>
                 </div>
             </div>
-            <div class="col" style="width: 40%; display: flex; align-items: center;">
+            <div class="col col-40" style="display: flex; align-items: center;">
                 <img src="./Resources/Images/Group 19.svg" alt="Code template">
             </div>
         </div>
     </section>
-    <section class="built-section" style="height: 80vh;">
+    <section class="built-section">
         <h2 class="heading built-title">Built by One, Engineered for All</h2>
 
         <div class="built-grid">
@@ -99,7 +99,7 @@
         </div>
     </section>
 
-    <section class="built-section" style="height: 80vh;">
+    <section class="built-section">
         <h2 class="heading built-title">What I Do</h2>
 
         <div class="built-grid">
