--- a/aboutme.html
+++ b/aboutme.html
@@ -16,8 +16,8 @@
             <ul class="navlist">
                 <li><a href="./index.html" target="_self" class="navlist-text">Sweath</a></li>
                 <li><a href="#" class="navlist-text">Summary</a></li>
-                <li><a href="#" class="navlist-text">Library</a></li>
-                <li><a href="#" class="navlist-text">Contact</a></li>
+                <li><a href="./library.html" class="navlist-text">Library</a></li>
+                <li><a href="./contact.html" class="navlist-text">Contact</a></li>
             </ul>
             <a href="https://www.instagram.com/Sweathkumar.g/"><img src="./Resources/Images/Vector.svg"
                     alt="instagram"></a>
@@ -118,20 +118,6 @@
             </p>
         </div>
 
-        <!-- DSA Highlight -->
-        <div class="built-card about-card dsa-accent">
-            <h3 class="subheading">Data Structures & Algorithms</h3>
-            <p class="subdescription">
-                Alongside my production work, I practice DSA to strengthen problem-solving fundamentals and logical thinking.
-            </p>
-            <p class="subdescription" style="margin-top: 16px; text-align: center; font-size: 15px;">
-                <strong style="font-size: 36px; color: var(--link-color); display: block; margin-bottom: 8px;">48</strong>
-                LeetCode problems solved<br>
-                Easy: <strong>36</strong> · Medium: <strong>10</strong> · Hard: <strong>2</strong><br><br>
-                Topics include Arrays, Strings, HashMap, Binary Search, Sliding Window, and Trees.
-            </p>
-        </div>
-
         <!-- Closing Note -->
         <div class="built-card about-card closing-note">
             <h3 class="subheading">Closing Note</h3>
@@ -152,11 +138,11 @@
 
                 <div class="footer-columns">
                     <div class="footer-col">
-                        <a href="#" class="footer-link">Projects</a>
+                        <a href="./library.html" class="footer-link">Projects</a>
                         <a href="#" class="footer-link">Certificates</a>
                         <a href="#" class="footer-link">Resume</a>
                         <a href="./aboutme.html" class="footer-link">About</a>
-                        <a href="#" class="footer-link">Contact</a>
+                        <a href="./contact.html" class="footer-link">Contact</a>
                     </div>
 
                     <div class="footer-col">
