--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <img src="./Resources/Images/Group 16.svg" alt="logo">
             <ul class="navlist">
                 <li><a href="#" class="navlist-text">Summary</a></li>
-                <li><a href="#" class="navlist-text">Library</a></li>
-                <li><a href="#" class="navlist-text">Contact</a></li>
+                <li><a href="./library.html" class="navlist-text">Library</a></li>
+                <li><a href="./contact.html" class="navlist-text">Contact</a></li>
                 <li><a href="./aboutme.html" target="_self" class="navlist-text">About</a></li>
             </ul>
             <a href="https://www.instagram.com/Sweathkumar.g/"><img src="./Resources/Images/Vector.svg"
@@ -347,11 +347,11 @@
 
                 <div class="footer-columns">
                     <div class="footer-col">
-                        <a href="#" class="footer-link">Projects</a>
+                        <a href="./library.html" class="footer-link">Projects</a>
                         <a href="#" class="footer-link">Certificates</a>
                         <a href="#" class="footer-link">Resume</a>
                         <a href="./aboutme.html" class="footer-link">About</a>
-                        <a href="#" class="footer-link">Contact</a>
+                        <a href="./contact.html" class="footer-link">Contact</a>
                     </div>
 
                     <div class="footer-col">
